--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,6 +16,13 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adds subtle shadow for depth */
 }
 
+.app-header h1 {
+    margin: 0; /* Remove default margin */
+    font-size: 24px; /* Large header text */
+    font-weight: 600; /* Bold text for emphasis */
+    transform: translate(-80%);
+}
+
 /* Optional: Style for navigation links inside the header */
 .app-header a {
     color: #ffffff; /* White links */
@@ -94,7 +101,6 @@
   color: #fff; /* White text for contrast */
   background-color: #007bff; /* Bootstrap blue */
   padding: 10px 20px; /* Add padding for button shape */
-  border-radius: 4px; /* Rounded corners */
   border: none; /* Remove default borders */
   cursor: pointer; /* Pointer cursor on hover */
   transition: background-color 0.3s ease; /* Smooth hover effect */
@@ -151,6 +157,8 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
+    max-width: 20%;
+    margin-left: 40%;
   }
   
   .buy-now-button:hover {
@@ -187,6 +195,7 @@
   display: inline-block;
   left: 50%;
   transform: translate(-50%);
+  padding-bottom: 1rem;
 }
 
 /* Dropdown Button */
@@ -232,4 +241,13 @@
   text-decoration: none;
   color: black;
   display: block;
+}
+
+.dropdown-icon {
+  margin-left: 8px;
+  transition: transform 0.3s ease;
+}
+
+.dropdown-icon .open {
+  transform: rotate(180deg); /* Rotate the icon when the dropdown is open */
 }
